# mangos-svn

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  bcpp.cfg  config.h.in  configure  configure.ac  ltmain.sh  reconf
branches/theluda-dev/: AUTHORS  ChangeLog  INSTALL  INSTALL.Win32.txt  Makefile.am  README  README.Win32.txt  configure.ac
branches/theluda-dev/dep/: Makefile.am
branches/theluda-dev/doc/: developer-manual.xml  quickstart-manual.xml
branches/theluda-dev/src/: Makefile.am
sql/: Makefile.am  Makefile.in  accounts.sql  areatriggers.sql  auctioned_items.sql  auctionhouse.sql  bids.sql  char_actions.sql  char_spells.sql  characters.sql  commands.sql  corpses.sql  create_mysql.sql  creature_names.sql  creatureinvolvedrelation.sql  creatureloot.sql  creaturequestrelation.sql  creatures.sql  creatures_mov.sql  creaturespells.sql  creaturetemplate.sql  firewall.sql  gameobjects.sql  gameobjecttemplate.sql  gmticket.sql  graveyards.sql  guilds.sql  guilds_members.sql  inventory.sql  ipbantable.sql  item_instances.sql  item_pages.sql  items.sql  mail.sql  mailed_items.sql  mangos.sql  npc_gossip.sql  npc_options.sql  npc_text.sql  playercreateinfo.sql  (+20 more)
sql/data/: commands.sql  playercreateinfo.sql  playercreateinfoData.sql
sql/tools/: README
sql/updates/: 1282_playercreateinfo_item.sql  1411_item_template.sql  1799_quest_template.sql  1825_game_corpse.sql  1915_loot_template.sql  1949_corpse.sql  2079_command.sql  2107_command.sql  2118_playercreateinfo_spell.sql  2270_command.sql  2343_rest_sql.sql  2367_command.sql  2369_creature_template.sql  2382_mail_item.sql  2454_command.sql  2468_command.sql  2597_playercreateinfo_item.sql  2610_character.sql  2637_mail.sql  2684_gameobject.sql  2688_command.sql  2689_player_levelstats.sql  2699_character_inventory.sql  2713_quest_template.sql  2803_command.sql  2812_character_pet.sql  2828_character.sql  2838_gameobject_grid.sql  2842_character_pet.sql  2875_npc_trainer.sql  2938_spell_scripts.sql  2958_command.sql  3005.sql  3068_command.sql  3091_spell_proc_event.sql  3107_playercreateinfo_skill.sql  3141_spell_threat.sql  3296_commands.sql  3348_playercreateinfo_spell.sql  3350_command.sql  (+87 more)
src/framework/: Makefile.am  Makefile.in
src/framework/Dynamic/: FactoryHolder.cpp  FactoryHolder.h  ObjectRegistry.cpp  ObjectRegistry.h
src/framework/GameSystem/: Grid.cpp  Grid.h  GridLoader.cpp  GridLoader.h  GridLoaderP.h  GridRefManager.h  GridReference.h  TypeContainer.cpp  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h  TypeContainerVisitor.cpp  TypeContainerVisitor.h
src/framework/Network/: SocketDefines.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.cpp  CreationPolicy.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.cpp  Singleton.h  SingletonImp.h  ThreadingModel.cpp  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  HashMap.h  LinkedList.h  Reference.cpp  Reference.h  ReferenceHolder.h  ReferenceImpl.h  TypeList.h
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  Affect.h  AggressorAI.cpp  AggressorAI.h  AnimalRandomMovementGenerator.h  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouse.cpp  AuctionHouseObject.h  Bag.cpp  Bag.h  BaseModel.h  BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h  Cell.h  CellImpl.h  (+253 more)
src/mangosd/: CliRunnable.cpp  CliRunnable.h  HttpdRunnable.cpp  HttpdRunnable.h  Main.cpp  Makefile.am  Makefile.in  Master.cpp  Master.h  Master.h.in  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  mangos.conf  mangosd.conf.dist.in  mangosd.conf.in  mangosd.rc  runwow
src/shared/: Base.cpp  ByteBuffer.h  Common.h  Errors.h  EventSystem.h  Log.cpp  Log.h  Makefile.am  Makefile.in  MemoryLeaks.cpp  MemoryLeaks.h  Mthread.cpp  PacketLog.cpp  PacketLog.h  ProgressBar.cpp  ProgressBar.h  Singleton.h  SystemConfig.h  SystemConfig.h.in  Timer.h  Util.cpp  Util.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h  WorldPacket.h  gensvnrevision  svn_revision.h
src/shared/Auth/: AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  Makefile.am  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h  md5.c  md5.h
src/shared/Config/: Config.cpp  Config.h  ConfigEnv.h  Makefile.am
src/shared/Database/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.cpp  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabasePostgre.cpp  DatabasePostgre.h  DatabaseSqlite.cpp  DatabaseSqlite.h  Field.cpp  Field.h  Makefile.am  PGSQLDelayThread.h  QueryResult.h  QueryResultMysql.cpp  QueryResultMysql.h  QueryResultPostgre.cpp  QueryResultPostgre.h  QueryResultSqlite.cpp  QueryResultSqlite.h  SQLStorage.cpp  SQLStorage.h  SqlDelayThread.cpp  dbcfile.cpp  (+4 more)
tags/0.5/: Makefile.am
trunk/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bcpp.cfg  config.h.in  configure  configure.ac  reconf
trunk/contrib/: Makefile.am
trunk/dep/: Makefile.am  Makefile.in
trunk/doc/: DocStructure.dox  Makefile.am  Makefile.in
trunk/sql/: Makefile.am  Makefile.in  accounts.sql  char_actions.sql  characters.sql  creature_names.sql  creatureloot.sql  creaturequestrelation.sql  creatures.sql  creatures_mov.sql  creaturespells.sql  drop_mysql.sql  gameobj_loot.sql  gmtickets.sql  item_instances.sql  items.sql  mailed_items.sql  mangos.sql  playercreateinfo_spells.sql  realmd.sql  realms.sql  talents.sql  taxinodes.sql  teleport_cords.sql  vendors.sql
trunk/src/: Makefile.am  Makefile.in
trunk/win/: mangosdVC71.sln  mangosdVC80.sln  mangosdVC90.sln  svn_revision.js
trunk/win_intel/: mangosdVC71.sln
(+3548 files in other folders)
