# Copyright (C) 2004 Wow Daemon
# Copyright (C) 2005 MaNGOS <https://opensvn.csie.org/traccgi/MaNGOS/trac.cgi/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

# SQL files for MaNGOS database
EXTRA_DIST = \
	sql/accounts.sql \
	sql/areatriggers.sql \
	sql/auctioned_items.sql \
	sql/auctionhouse.sql \
	sql/bids.sql \
	sql/characters.sql \
	sql/char_actions.sql \
	sql/char_spells.sql \
	sql/commands.sql \
	sql/corpses.sql \
	sql/creatureloot.sql \
	sql/creature_names.sql \
	sql/creaturequestrelation.sql \
	sql/creatures_mov.sql \
	sql/creaturespells.sql \
	sql/creatures.sql \
	sql/creaturetemplate.sql \
	sql/firewall.sql \
	sql/gameobjects.sql \
	sql/gameobjecttemplate.sql \
	sql/gameobj_loot.sql \
	sql/graveyards.sql \
	sql/inventory.sql \
	sql/ipbantable.sql \
	sql/item_instances.sql \
	sql/items.sql \
	sql/mailed_items.sql \
	sql/mail.sql \
	sql/npc_gossip.sql \
	sql/npc_options.sql \
	sql/npc_text.sql \
	sql/playercreateinfo_actions.sql \
	sql/playercreateinfo_items.sql \
	sql/playercreateinfo_skills.sql \
	sql/playercreateinfo_spells.sql \
	sql/playercreateinfo.sql \
	sql/quests.sql \
	sql/queststatus.sql \
	sql/realms.sql \
	sql/social.sql \
	sql/spirithealers.sql \
	sql/talents.sql \
	sql/taxinodes.sql \
	sql/taxipathnodes.sql \
	sql/taxipath.sql \
	sql/teleport_cords.sql \
	sql/trainer.sql \
	sql/vendors.sql

# SQL files for MaNGOS database to be installed to datadir
pkgdata_DATA = \
	sql/accounts.sql \
	sql/areatriggers.sql \
	sql/auctioned_items.sql \
	sql/auctionhouse.sql \
	sql/bids.sql \
	sql/characters.sql \
	sql/char_actions.sql \
	sql/char_spells.sql \
	sql/commands.sql \
	sql/corpses.sql \
	sql/creatureloot.sql \
	sql/creature_names.sql \
	sql/creaturequestrelation.sql \
	sql/creatures_mov.sql \
	sql/creaturespells.sql \
	sql/creatures.sql \
	sql/creaturetemplate.sql \
	sql/firewall.sql \
	sql/gameobjects.sql \
	sql/gameobjecttemplate.sql \
	sql/gameobj_loot.sql \
	sql/graveyards.sql \
	sql/inventory.sql \
	sql/ipbantable.sql \
	sql/item_instances.sql \
	sql/items.sql \
	sql/mailed_items.sql \
	sql/mail.sql \
	sql/npc_gossip.sql \
	sql/npc_options.sql \
	sql/npc_text.sql \
	sql/playercreateinfo_actions.sql \
	sql/playercreateinfo_items.sql \
	sql/playercreateinfo_skills.sql \
	sql/playercreateinfo_spells.sql \
	sql/playercreateinfo.sql \
	sql/quests.sql \
	sql/queststatus.sql \
	sql/realms.sql \
	sql/social.sql \
	sql/spirithealers.sql \
	sql/talents.sql \
	sql/taxinodes.sql \
	sql/taxipathnodes.sql \
	sql/taxipath.sql \
	sql/teleport_cords.sql \
	sql/trainer.sql \
	sql/vendors.sql

# directory defines
pkgdatadir = @MANGOSD_DATA@/sql
