# Copyright (C) 2005 MaNGOS <https://opensvn.csie.org/traccgi/MaNGOS/trac.cgi/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

# SQL files for MaNGOS database
EXTRA_DIST = \
	accounts.sql \
	areatriggers.sql \
	auctioned_items.sql \
	auctionhouse.sql \
	bids.sql \
	characters.sql \
	char_actions.sql \
	char_spells.sql \
	commands.sql \
	corpses.sql \
	creatureloot.sql \
	creature_names.sql \
	creaturequestrelation.sql \
	creatures_mov.sql \
	creaturespells.sql \
	creatures.sql \
	creaturetemplate.sql \
	firewall.sql \
	gameobjects.sql \
	gameobjecttemplate.sql \
	gameobj_loot.sql \
	graveyards.sql \
	guilds.sql \
	guilds_members.sql \
	inventory.sql \
	ipbantable.sql \
	item_instances.sql \
	items.sql \
	mailed_items.sql \
	mail.sql \
	npc_gossip.sql \
	npc_options.sql \
	npc_text.sql \
	playercreateinfo_actions.sql \
	playercreateinfo_items.sql \
	playercreateinfo_skills.sql \
	playercreateinfo_spells.sql \
	playercreateinfo.sql \
	quests.sql \
	queststatus.sql \
	realms.sql \
	social.sql \
	spirithealers.sql \
	talents.sql \
	taxinodes.sql \
	taxipathnodes.sql \
	taxipath.sql \
	teleport_cords.sql \
	trainer.sql \
	vendors.sql \
	gmtickets.sql

# SQL files for MaNGOS database to be installed to datadir
pkgdata_DATA = \
	accounts.sql \
	areatriggers.sql \
	auctioned_items.sql \
	auctionhouse.sql \
	bids.sql \
	characters.sql \
	char_actions.sql \
	char_spells.sql \
	commands.sql \
	corpses.sql \
	creatureloot.sql \
	creature_names.sql \
	creaturequestrelation.sql \
	creatures_mov.sql \
	creaturespells.sql \
	creatures.sql \
	creaturetemplate.sql \
	firewall.sql \
	gameobjects.sql \
	gameobjecttemplate.sql \
	gameobj_loot.sql \
	graveyards.sql \
	guilds.sql \
	guilds_members.sql \
	inventory.sql \
	ipbantable.sql \
	item_instances.sql \
	items.sql \
	mailed_items.sql \
	mail.sql \
	npc_gossip.sql \
	npc_options.sql \
	npc_text.sql \
	playercreateinfo_actions.sql \
	playercreateinfo_items.sql \
	playercreateinfo_skills.sql \
	playercreateinfo_spells.sql \
	playercreateinfo.sql \
	quests.sql \
	queststatus.sql \
	realms.sql \
	social.sql \
	spirithealers.sql \
	talents.sql \
	taxinodes.sql \
	taxipathnodes.sql \
	taxipath.sql \
	teleport_cords.sql \
	trainer.sql \
	vendors.sql \
	gmtickets.sql

# directory defines
pkgdatadir = @MANGOSD_DATA@/sql
