# Copyright (C) 2005-2007 MaNGOS <http://www.mangosproject.org/>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

## Process this file with autoconf to produce a configure script.

## Prelude, basic settings for Autoconf
#  PACKAGE:            mangos
#  VERSION:            0.7 (trunk)
#  BUG-REPORT-ADDRESS: mangos-devs@lists.sourceforge.net
AC_INIT( [mangos], [0.7], [mangos-devs@lists.sourceforge.net])

## Prelude, basic settings for Automake
#  Turn on all warnings and error messages, and enforce GNU
#  standards for the package.
AM_INIT_AUTOMAKE(-Wall -Werror)

## Check for required dependencies.

## Check for a valid build environment.
#  Valid equals having:
#  - a C++ compiler compliant with the ISO98 C++ specification.
#  - a working library tool for creating convenience libraries.
#  - a working linker for creating static and shared libraries.
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_PROG_LIBTOOL
AC_PROG_INSTALL

## Check for required libraries.

## Check for required header files.

## Check for typedefs, structures, and compiler characteristics.

## Check for required library functions.

## Export defined variables

## Set output files.
AC_CONFIG_HEADERS( [src/config.h] )
AC_CONFIG_FILES( [
] )

## Output files.
AC_OUTPUT
